Equals sign spacing toggle.
Option to have the translated text formatted with either 'param=value'
or 'param = value'.

--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -15,10 +15,13 @@
     "Date rsw": "RuneScape Wiki date",
     "Date rsw description": "Clicking on a {{Data}} also opens the given PT-BR Wiki date page.",
     "Date rsw addendum": "Requires pop-up windows to be enabled in the browser.",
-    "Untraslated text": "Untranslated Text",
+    "Text formatting": "Text Formatting",
     "Remove text": "Remove texts",
     "Remove text description": "Remove untranslated article body parts.",
     "Remove text addendum": "Doesn't include templates or their untranslated parameters and values.",
+    "Space equals sign": "Equals sign spacing",
+    "Space equals sign description": "Adds spacing before and after equals signs for params and values.",
+    "Space equals sign addendum": "'param=value' → 'param = value'",
     "Highlight untranslated": "Highlight untranslated",
     "Highlight untranslated description": "Marks unchanged text after translation with a different color.",
     "Differentiate examines": "Differentiate examines",
