--- a/public/locales/pt/translation.json
+++ b/public/locales/pt/translation.json
@@ -15,10 +15,13 @@
     "Date rsw": "Data RuneScape Wiki",
     "Date rsw description": "Clicar em uma {{Data}} também abre a página da Wiki PT-BR correspondente.",
     "Date rsw addendum": "Precisa que janelas em pop-up estejam permitidas no navegador.",
-    "Untraslated text": "Texto Não-traduzido",
+    "Text formatting": "Formatação Textual",
     "Remove text": "Remover textos",
     "Remove text description": "Remove partes do corpo do artigo que ficaram sem traduzir.",
     "Remove text addendum": "Não inclui predefinições ou seus parâmetros e valores não-traduzidos.",
+    "Space equals sign": "Espaçamento simb. igual",
+    "Space equals sign description": "Adiciona espaço antes e depois de símbolos de igualdade para parâmetros e valores.",
+    "Space equals sign addendum": "'parâmetro=valor' → 'parâmetro = valor'",
     "Highlight untranslated": "Realçar não-traduzido",
     "Highlight untranslated description": "Marca o texto inalterado após a tradução com uma cor diferente.",
     "Differentiate examines": "Diferenciar examinar",
