Options tooltips text improvements.
- Changes to make both versions more consistent with one another;

- Better English translation for the debugger description.

--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -20,7 +20,7 @@
     "Remove text description": "Remove untranslated article body parts.",
     "Remove text addendum": "Doesn't include templates or their untranslated parameters and values.",
     "Space equals sign": "Equals sign spacing",
-    "Space equals sign description": "Adds spacing before and after equals signs for params and values.",
+    "Space equals sign description": "Add spacing before and after equals signs for params and values.",
     "Space equals sign addendum": "'param=value' → 'param = value'",
     "Highlight untranslated": "Highlight untranslated",
     "Highlight untranslated description": "Marks unchanged text after translation with a different color.",
@@ -35,14 +35,14 @@
     "Retranslate": "Retranslate button",
     "Retranslate description": "Shows a button in the text input to execute translation again.",
     "Debugger": "Toggle debugger",
-    "Debugger description": "Toggles the exibition of all variables in the browser's console during translation.",
-    "Debugger splitted": "Shows in the debugger the variable 'splitted' during translation.",
-    "Debugger template": "Shows in the debugger info about each template found during translation.",
+    "Debugger description": "Toggles the printing of variables and data in the browser's console during translation.",
+    "Debugger splitted": "Prints the variable 'splitted' during translation.",
+    "Debugger template": "Prints info about each template found during translation.",
     "Debugger success": "Debugger successes",
-    "Debugger success description": "Shows in the debugger successfuly-handled irregularities during translation.",
+    "Debugger success description": "Prints successfuly-handled irregularities during translation.",
     "Debugger skipped": "Debugger skipped",
-    "Debugger skipped description": "Shows in the debugger lines of text purposely ignored during translation.",
+    "Debugger skipped description": "Prints lines of text purposely ignored during translation.",
     "Debugger errors": "Debugger errors",
-    "Debugger errors description": "Shows in the debugger lines that get skipped during translation due to lack/non-existance of data.", 
+    "Debugger errors description": "Prints lines that get skipped during translation due to lack and/or non-existance of data.", 
     "Credits": "Made by <1>{{guava}}</1> & <2>{{dragonic}}</2>."
 }
