--- a/public/locales/pt/translation.json
+++ b/public/locales/pt/translation.json
@@ -35,14 +35,14 @@
     "Retranslate": "Botão retraduzir",
     "Retranslate description": "Mostra um botão na caixa de entrada de texto para executar a tradução novamente.",
     "Debugger": "Ativar debugger",
-    "Debugger description": "Ativa a exibição de todas as variáveis no console do navegador durante a tradução.",
-    "Debugger splitted": "Exibe a variável 'splitted' no debugger durante a tradução.",
-    "Debugger template": "Exibe as informações no debugger de cada Template encontrado durante a tradução.",
+    "Debugger description": "Ativa a exibição de variáveis e dados no console do navegador durante a tradução.",
+    "Debugger splitted": "Exibe a variável 'splitted' durante a tradução.",
+    "Debugger template": "Exibe as informações sobre cada Template encontrado durante a tradução.",
     "Debugger success": "Debugger sucessos",
-    "Debugger success description": "Exibe no debugger as linhas irregulares de texto traduzidas com sucesso.",
+    "Debugger success description": "Exibe as linhas irregulares de texto traduzidas com sucesso.",
     "Debugger skipped": "Debugger ignorados",
-    "Debugger skipped description": "Exibe no debugger as linhas de texto ignoradas durante a tradução.",
+    "Debugger skipped description": "Exibe as linhas de texto ignoradas durante a tradução.",
     "Debugger errors": "Debugger erros",
-    "Debugger errors description": "Exibe no debugger as linhas de texto que são ignoradas por falta e/ou não-existência de dados.", 
+    "Debugger errors description": "Exibe as linhas de texto que são ignoradas por falta e/ou não-existência de dados.", 
     "Credits": "Feito por <1>{{guava}}</1> & <2>{{dragonic}}</2>."
 }
